--- a/nodePlay/package.json
+++ b/nodePlay/package.json
@@ -1,15 +1,13 @@
 {
   "name": "@clarkgh/playing-games",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "I'm digging deep into npm",
   "main": "index.js",
   "scripts": {
     "test": "node test.js"
   },
   "author": "clark hinchcliff",
-  "repository":"https://github.com/ClarkGH/freeCodeCampPractice",
+  "repository": "https://github.com/ClarkGH/freeCodeCampPractice",
   "license": "MIT",
-  "dependencies": {
-    "@linclark/pkg": "^1.0.2"
-  }
+  "dependencies": {}
 }
