--- a/nodePlay/bookshelf/package.json
+++ b/nodePlay/bookshelf/package.json
@@ -10,10 +10,14 @@
   "dependencies": {
     "async": "^1.4.2",
     "bluebird": "^2.10.1",
+    "body-parser": "^1.14.0",
     "bookshelf": "^0.8.2",
+    "express": "^4.13.3",
     "knex": "^0.8.6",
     "lodash": "^3.10.1",
+    "method-override": "^2.3.5",
     "moment": "^2.10.6",
+    "multer": "^1.0.5",
     "mysql": "^2.9.0"
   },
   "author": "Clark Hinchcliff",
