--- a/nodePlay/todo_app/package.json
+++ b/nodePlay/todo_app/package.json
@@ -6,6 +6,7 @@
     "start": "supervisor ./bin/www"
   },
   "dependencies": {
+    "bluebird": "~2.10.1",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
