--- a/nodePlay/todo_app/package.json
+++ b/nodePlay/todo_app/package.json
@@ -8,11 +8,14 @@
   "dependencies": {
     "bluebird": "~2.10.1",
     "body-parser": "~1.13.2",
+    "bookshelf": "^0.8.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "knex": "^0.8.6",
     "morgan": "~1.6.1",
+    "pg": "^4.4.2",
     "serve-favicon": "~2.3.0"
   }
 }
