--- a/nodePlay/todo_app/package.json
+++ b/nodePlay/todo_app/package.json
@@ -10,9 +10,11 @@
   "author": "Clark Hinchcliff",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^2.10.1",
     "bookshelf": "^0.8.2",
     "express": "^4.13.3",
     "knex": "^0.8.6",
+    "lodash": "^3.10.1",
     "pg": "^4.4.2"
   }
 }
