--- a/nodePlay/expresstut/package.json
+++ b/nodePlay/expresstut/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^2.10.1",
+    "body-parser": "^1.14.0",
     "bookshelf": "^0.8.2",
     "knex": "^0.8.6",
     "pg": "^4.4.2"
