--- a/nodePlay/expresstut/package.json
+++ b/nodePlay/expresstut/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.14.0",
     "bookshelf": "^0.8.2",
     "knex": "^0.8.6",
-    "pg": "^4.4.2"
+    "pg": "^4.4.2",
+    "stylus": "^0.52.4"
   }
 }
