--- a/nodePlay/todo/package.json
+++ b/nodePlay/todo/package.json
@@ -7,5 +7,11 @@
     "test": "test"
   },
   "author": "Clark Hinchcliff",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bluebird": "^2.10.1",
+    "body-parser": "^1.14.0",
+    "express": "^4.13.3",
+    "lodash": "^3.10.1"
+  }
 }
