--- a/nodePlay/todo/package.json
+++ b/nodePlay/todo/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "bluebird": "^2.10.1",
     "body-parser": "^1.14.0",
+    "bookshelf": "^0.8.2",
     "express": "^4.13.3",
-    "lodash": "^3.10.1"
+    "knex": "^0.8.6",
+    "lodash": "^3.10.1",
+    "pg": "^4.4.2"
   }
 }
