--- a/nodePlay/todo/package.json
+++ b/nodePlay/todo/package.json
@@ -15,6 +15,7 @@
     "express": "^4.13.3",
     "knex": "^0.8.6",
     "lodash": "^3.10.1",
-    "pg": "^4.4.2"
+    "pg": "^4.4.2",
+    "when": "^3.7.3"
   }
 }
