--- a/nodePlay/todo/package.json
+++ b/nodePlay/todo/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.14.0",
     "bookshelf": "^0.8.2",
     "express": "^4.13.3",
+    "jade": "^1.11.0",
     "knex": "^0.8.6",
     "lodash": "^3.10.1",
     "pg": "^4.4.2",
