--- a/nodePlay/todo_example_2/package.json
+++ b/nodePlay/todo_example_2/package.json
@@ -9,8 +9,13 @@
   "author": "Clark Hinchcliff",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^2.10.1",
+    "body-parser": "^1.14.1",
     "bookshelf": "^0.8.2",
+    "express": "^4.13.3",
+    "jade": "^1.11.0",
     "knex": "^0.8.6",
+    "lodash": "^3.10.1",
     "pg": "^4.4.2"
   }
 }
