--- a/timer/package.json
+++ b/timer/package.json
@@ -9,6 +9,8 @@
   "author": "Clark Hinchcliff",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "jade": "^1.11.0",
+    "jquery-knob": "^1.2.11"
   }
 }
