Bringing in Gulp and sass

--- a/timer/package.json
+++ b/timer/package.json
@@ -10,6 +10,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.13.3",
-    "jade": "^1.11.0"
+    "gulp": "^3.9.0",
+    "jade": "^1.11.0",
+    "node-sass": "^3.3.3"
   }
 }
