--- a/timer/package.json
+++ b/timer/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "express": "^4.13.3",
     "gulp": "^3.9.0",
-    "jade": "^1.11.0",
-    "node-sass": "^3.3.3"
+    "jade": "^1.11.0"
   }
 }
