--- a/gulper/package.json
+++ b/gulper/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-jshint": "^1.11.2",
+    "gulp-sass": "^2.0.4",
     "gulp-util": "^3.0.6",
     "jshint-stylish": "^2.0.1"
   }
