--- a/gulper/package.json
+++ b/gulper/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.2",
     "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
     "jshint-stylish": "^2.0.1"
   }
