--- a/timer/package.json
+++ b/timer/package.json
@@ -12,5 +12,9 @@
     "express": "^4.13.3",
     "gulp": "^3.9.0",
     "jade": "^1.11.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-util": "^3.0.6"
   }
 }
