--- a/timer/package.json
+++ b/timer/package.json
@@ -15,7 +15,6 @@
   },
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-sass": "^2.0.4",
-    "gulp-util": "^3.0.6"
+    "gulp-sass": "^2.0.4"
   }
 }
